Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <th>State</th>
     <th>2017 Estimate</th>
   </tr>
-  <tr>New York</tr>
-  <tr>California</tr>
+  <tr>
+    <td>New York</td>
+    <td>New York</td>
+    <td>8,622,698</td>
+  </tr>
+  <tr></tr>
   <tr></tr>
   <tr></tr>
 </table>
